--- a/src/components/Main/CountriesList/countrieslist.scss
+++ b/src/components/Main/CountriesList/countrieslist.scss
@@ -1,3 +1,12 @@
 .countrieslist {
   padding: 1em 4em;
 }
+
+@media screen and (min-width: 1440px) {
+  .countrieslist {
+    padding: 2em 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
