--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -2,3 +2,14 @@
   background-color: var(--theme-background);
   color: var(--theme-text);
 }
+
+@media screen and (min-width: 1440px) {
+  .main {
+    padding: 2em 5em;
+
+    .main-forms {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
